Add twitter bootstrap and change main.php

--- a/style.ini
+++ b/style.ini
@@ -7,8 +7,8 @@
 ; to screen styles if a right-to-left language is selected (eg. hebrew)
 [stylesheets]
 layout.css     = screen
-design.css     = screen
 style.css      = screen
+bootstrap/css/bootstrap.css = screen
 
 media.css         = screen
 _mediaoptions.css = screen
