--- a/style.ini
+++ b/style.ini
@@ -6,21 +6,22 @@
 ; print, screen and rtl are supported. rtl styles are loaded additionally
 ; to screen styles if a right-to-left language is selected (eg. hebrew)
 [stylesheets]
-layout.css     = screen
-style.css      = screen
+;layout.css     = screen
+;style.css      = screen
 bootstrap/css/bootstrap.css = screen
+amdy.css        = screen
 
-media.css         = screen
-_mediaoptions.css = screen
-_admin.css        = screen
-_linkwiz.css      = screen
-_subscription.css = screen
-_mediamanager.css  = screen
-_tabs.css         = screen
-_fileuploader.css = screen
+;media.css         = screen
+;_mediaoptions.css = screen
+;_admin.css        = screen
+;_linkwiz.css      = screen
+;_subscription.css = screen
+;_mediamanager.css  = screen
+;_tabs.css         = screen
+;_fileuploader.css = screen
 
-rtl.css        = rtl
-print.css      = print
+;rtl.css        = rtl
+;print.css      = print
 
 ; This section is used to configure some placeholder values used in
 ; the stylesheets. Changing this file is the simplest method to
